--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     ]
   },
   "dependencies": {
+    "autoprefixer": "10.4.0",
     "blitz": "0.43.0",
+    "postcss": "8.4.4",
+    "react": "18.0.0-alpha-5ca4b0433-20211020",
     "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
-    "react": "18.0.0-alpha-5ca4b0433-20211020"
+    "tailwindcss": "2.2.19"
   },
   "devDependencies": {
     "eslint": "7.32.0",
