--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.0",
+    "babel-eslint": "10.1.0",
     "blitz": "0.43.0",
     "postcss": "8.4.4",
     "react": "18.0.0-alpha-5ca4b0433-20211020",
