--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@formspree/react": "2.2.4",
     "autoprefixer": "10.4.0",
     "babel-eslint": "10.1.0",
     "blitz": "0.43.0",
