--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "blitz": "0.43.0",
     "postcss": "8.4.4",
     "react": "18.0.0-alpha-5ca4b0433-20211020",
-    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
-    "tailwindcss": "2.2.19"
+    "react-dom": "18.0.0-alpha-5ca4b0433-20211020"
   },
   "devDependencies": {
     "eslint": "7.32.0",
