--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     ]
   },
   "dependencies": {
+    "@blitzjs/auth": "2.0.0-beta.20",
+    "@blitzjs/next": "2.0.0-beta.20",
+    "@blitzjs/rpc": "2.0.0-beta.20",
     "@formspree/react": "2.2.4",
     "autoprefixer": "10.4.0",
     "babel-eslint": "10.1.0",
