--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.14.5"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
   }
 }
