--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sanity": "^3.14.5"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.0.1"
+    "@svgr/webpack": "^8.0.1",
+    "prettier": "3.0.1"
   }
 }
