--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@sanity/vision": "^3.14.5",
     "cypress": "^12.17.3",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "eslint-config-next": "^14.2.5",
+    "next": "^14.2.5",
     "next-sanity": "^5.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "^3.14.5"
   },
   "devDependencies": {
