--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-sanity": "^5.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^3.14.5"
+    "sanity": "^3.14.5",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1"
